website strucutre - very basic

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>Michal Szczepanski Porfolio Website</title>
 
     <link rel="stylesheet" href="css/style.css">
-
-
-
 </head>
+
 <body>
     <header id="mainHeader">
         <div class="container">
@@ -19,18 +17,20 @@
     </header>
 
     <nav id="navbar">
+        <div class="container">
         <ul>
             <li><a href="https://www.linkedin.com/in/szczepanskimichal/">LinkedIn</a></li>
             <li><a href="https://www.behance.net/szczepanskimichal">Behance</a></li>
             <li><a href="https://twitter.com/mm_szczepanski">Twitter</a></li>
             <li><a href="https://unsplash.com/@mm_szczepanski/">Unsplash</a></li>
         </ul>
+        </div>
     </nav>
 
 
     <section id="showcase">
         <div class ="container">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam fugiat, ut sapiente tempore voluptates, blanditiis itaque inventore ipsam iusto commodi natus quaerat facilis eius recusandae enim saepe porro! Deleniti, rerum!
+            <h1>I'd like to introduce you to a few things I'm good at. Just like that.</h1>
         </div>
     </section>
 
@@ -43,13 +43,16 @@
     </section>
 
     <aside id="sidebar">
+        <h1>not welcome</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat ea distinctio facere odio dicta pariatur necessitatibus? Maxime illum illo, a natus dolore quasi! Cumque neque quis qui rem accusamus eaque? 
         </p>
         
     </aside>
     </div>
 
-
+    <footer id="mainFooter"> 
+        <p>Copywrite &copy; 2020</p>
+    </footer>
 
 
 </body>
