responsive bakery website with 4 pages created

--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="bakery.html">Bakery</a></li>
         <li class="current"><a href="services.html">Services</a></li>
-        <li><a href="baker.html">The Baker</a></li>
+        <li><a href="theBaker.html">The Baker</a></li>
     </nav>
   </header>
 
@@ -30,38 +30,64 @@
     <div class="container">
       <h1>We can offer you plenty of sweet services!</h1>
       <ul>
-        <li>Cakes</li>
-        <li>Pastries</li>
-        <li>Brownies</li>
-        <li>Candy</li>
+        <li><a href=#bakingCakes>Cakes</a></li>
+        <li><a href=#makingPastries>Pastries</a></li>
+        <li><a href=#moldingBrownies>Brownies</a></li>
+        <li><a href=#makingCandy>Candy</a></li>
       </ul>
     </div>
   </section>
 
 <section id="services">
   <div class="container">
+
+    <article id="servicesArticle">
     <ul>
       <li>
-        <h3>Baking Cakes</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <h3 id="bakingCakes">Baking Cakes</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <p>Pricing $100-$200</p>
       </li>
       <li>
-        <h3>Making Pastries</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <h3 id="makingPastries">Making Pastries</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <p>Pricing $2100-$300</p>
       </li>
       <li>
-        <h3>Molding Browniess</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <h3 id="moldingBrownies">Molding Brownies</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <p>Pricing $50-$250</p>
       </li>
       <li>
-        <h3>Making Candys</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <h3 id="makingCandy">Making Candys</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <p>Pricing $10-$2000</p>
       </li>
     </ul>
+      </article>
+
+      <aside id="sidebar">
+
+        <div class="dark">
+          <h3>Place Your Order</h3>
+          <form class="quote">
+            <div>
+              <label>Name</label><br>
+              <input type="text" placeholder="Your Name">
+            </div>
+            <div>
+              <label>Email</label><br>
+              <input type="email" placeholder="Your Email"
+            </div>
+            <div>
+              <label>Message</label><br>
+              <textarea placeholder="Your Message"></textarea>
+              </div>
+              <button class="button_2" type="submit">Place Order</button>
+            </form>
+        </div>
+      </aside>
+
     </div>
   </section>
 
