--- a/theBaker.html
+++ b/theBaker.html
@@ -19,48 +19,21 @@
     </div>
     <nav>
       <ul>
-        <li class="current"><a href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="bakery.html">Bakery</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="baker.html">The Baker</a></li>
+        <li class="current"><a href="theBaker.html">The Baker</a></li>
     </nav>
   </header>
 
-  <section id="showcase">
-    <div class="container">
-      <h1>Sweet Stuff Straight From The Heart</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-    </div>
-  </section>
-
-<section id="newsletter">
+<section id="theBaker">
   <div class="container">
-    <h1>Subscribe to get weekly coupons</h1>
-    <form>
-      <input type="email" placeholder="Type email here">
-      <button type="submit" class="button_1">Subscribe</button>
-    </form>
+    <img src="./images/theBaker.jpg" alt="The Baker @Anna's">
+    <h1>Meet Anna</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
 </section>
 
-<section id="allergies">
-  <div class="container">
-    <div class="box">
-      <img src="./images/dairy_icon.png" alt="Diary Allergies" height="150px">
-      <h3>Dairy Allergies</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-    </div>
-    <div class="box">
-      <img src="./images/gluten_icon.png" alt="Gluten Allergies" height="150px">
-      <h3>Gluten Allergies</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-    </div>
-    <div class="box">
-      <img src="./images/apple_icon.png" alt="Fruit & Vegetable Allergies" height="150px">
-      <h3>Fruit Allergies</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-    </div>
-  </div>
 
 <footer>
 <p>Anna's Great Cakes &copy; 2020</p>
