--- a/bakery.html
+++ b/bakery.html
@@ -19,16 +19,16 @@
     </div>
     <nav>
       <ul>
-        <li><a href="index.html" target="_blank">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li class="current"><a href="bakery.html">Bakery</a></li>
-        <li><a href="services.html" target="_blank">Services</a></li>
-        <li><a href="baker.html" target="_blank">The Baker</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="theBaker.html">The Baker</a></li>
     </nav>
   </header>
 
 <section id="newsletter">
   <div class="container">
-    <h1>Subscribe to get weekly coupons</h1>
+    <h1>Subscribe to get coupons</h1>
     <form>
       <input type="email" placeholder="Type email here">
       <button type="submit" class="button_1">Subscribe</button>
@@ -38,6 +38,7 @@
 
 <section id="bakery-details">
   <div class="container">
+
     <aside id="sidebar">
       <div class="dark">
         <h3>Briefly on the bakery's history</h3>
@@ -58,14 +59,12 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
     </article>
 
-
   </div>
 </section>
 
 <footer>
 <p>Anna's Great Cakes &copy; 2020</p>
 </footer>
-
 
 </body>
 </HTML>
