--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <nav>
       <ul>
         <li class="current"><a href="index.html">Home</a></li>
-        <li><a href="bakery.html" target="_blank">Bakery</a></li>
-        <li><a href="services.html" target="_blank">Services</a></li>
-        <li><a href="theBaker.html" target="_blank">The Baker</a></li>
+        <li><a href="bakery.html">Bakery</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="theBaker.html">The Baker</a></li>
     </nav>
   </header>
 
@@ -62,12 +62,10 @@
     </div>
   </div>
 </section>
-<
 
 <footer>
 <p>Anna's Great Cakes &copy; 2020</p>
 </footer>
-
 
 </body>
 </HTML>
